syntax = "proto3";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;userProfileServiceGrpcProtos";

package profile;

message Session {
  string SessionId = 1;
}

message Profile {
  string email = 1;
  string password = 2;
}

message UpdateEmailData {
  Session session = 1;
  string email = 2;
}

message Nothing {
  bool ok = 1;
}

service AuthSessionService {
  rpc UpdateEmailBySession (UpdateEmailData) returns (Nothing){}
}
